<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LinearLayoutActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/boton11"
        tools:ignore="wide" />

    <Button
        android:id="@+id/button2"

        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/boton12" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/boton13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            style="@style/Rounded"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/boton16" />

        <Button
            android:id="@+id/button7"
            style="@style/Rounded"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/boton17" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/todo"
        android:src="@drawable/descargar" />
</LinearLayout>