<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_btns" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_wdgs" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tvs" />

        <item
            android:id="@+id/nav_fase"
            android:icon="@drawable/ic_fire"
            android:title="Fase" />

        <item
            android:id="@+id/nav_detail_fase"
            android:icon="@drawable/ic_fire"
            android:title="Detail Fase" />
    </group>


    <item android:title="Layouts">
        <menu>
            <item
                android:id="@+id/nav_linear_layout"
                android:icon="@drawable/ic_water"
                android:title="Activity Linear" />
            <item
                android:id="@+id/nav_linear"
                android:icon="@drawable/ic_water"
                android:title="Fragment Linear" />
            <item
                android:id="@+id/nav_relative"
                android:icon="@drawable/ic_water"
                android:title="Fragment Relative" />
            <item
                android:id="@+id/nav_constraint"
                android:icon="@drawable/ic_water"
                android:title="Constraint Relative" />

        </menu>
    </item>
</menu>