<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.netzunavanzado.ui.buttons.ButtonsFragment"
        android:label="@string/menu_btns"
        tools:layout="@layout/fragment_buttons" >
        <action
            android:id="@+id/action_nav_home_to_nav_constraint"
            app:destination="@id/nav_constraint" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.netzunavanzado.ui.widgets.WidgetsFragment"
        android:label="@string/menu_wdgs"
        tools:layout="@layout/fragment_widgets" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.netzunavanzado.ui.textviews.TextviewsFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_textviews" >
    </fragment>

    <fragment
        android:id="@+id/nav_fase"
        android:name="com.example.netzunavanzado.ui.detailsview.FaseFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_fase" >
    </fragment>

    <fragment
        android:id="@+id/nav_detail_fase"
        android:name="com.example.netzunavanzado.ui.detailsview.DetailFaseFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_detail_fase" >
    </fragment>

    <activity
        android:id="@+id/nav_linear_layout"
        android:name="com.example.netzunavanzado.LinearLayoutActivity"
        android:label="@string/menu_tvs"
        tools:layout="@layout/activity_linear_layout" >
    </activity>

    <fragment
        android:id="@+id/nav_linear"
        android:name="com.example.netzunavanzado.ui.layouts.LinearFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_linear" >
    </fragment>

    <fragment
        android:id="@+id/nav_relative"
        android:name="com.example.netzunavanzado.ui.layouts.RelativeFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_relative" >
    </fragment>
    <fragment
        android:id="@+id/nav_constraint"
        android:name="com.example.netzunavanzado.ui.layouts.ConstraintFragment"
        android:label="@string/menu_tvs"
        tools:layout="@layout/fragment_constraint" >
    </fragment>

</navigation>